BJS2-41581 - Получение достижения "Менеджер"